--- a/rest_api/monitoring_apis/podmonitor-monitoring-coreos-com-v1.adoc
+++ b/rest_api/monitoring_apis/podmonitor-monitoring-coreos-com-v1.adoc
@@ -65,38 +65,38 @@ Required::
 
 | `attachMetadata`
 | `object`
-| `attachMetadata` defines additional metadata which is added to the discovered targets. 
+| `attachMetadata` defines additional metadata which is added to the discovered targets.
  It requires Prometheus >= v2.37.0.
 
 | `bodySizeLimit`
 | `string`
-| When defined, bodySizeLimit specifies a job level limit on the size of uncompressed response body that will be accepted by Prometheus. 
+| When defined, bodySizeLimit specifies a job level limit on the size of uncompressed response body that will be accepted by Prometheus.
  It requires Prometheus >= v2.28.0.
 
 | `jobLabel`
 | `string`
-| The label to use to retrieve the job name from. `jobLabel` selects the label from the associated Kubernetes `Pod` object which will be used as the `job` label for all metrics. 
- For example if `jobLabel` is set to `foo` and the Kubernetes `Pod` object is labeled with `foo: bar`, then Prometheus adds the `job="bar"` label to all ingested metrics. 
+| The label to use to retrieve the job name from. `jobLabel` selects the label from the associated Kubernetes `Pod` object which will be used as the `job` label for all metrics.
+ For example if `jobLabel` is set to `foo` and the Kubernetes `Pod` object is labeled with `foo: bar`, then Prometheus adds the `job="bar"` label to all ingested metrics.
  If the value of this field is empty, the `job` label of the metrics defaults to the namespace and name of the PodMonitor object (e.g. `<namespace>/<name>`).
 
 | `keepDroppedTargets`
 | `integer`
-| Per-scrape limit on the number of targets dropped by relabeling that will be kept in memory. 0 means no limit. 
+| Per-scrape limit on the number of targets dropped by relabeling that will be kept in memory. 0 means no limit.
  It requires Prometheus >= v2.47.0.
 
 | `labelLimit`
 | `integer`
-| Per-scrape limit on number of labels that will be accepted for a sample. 
+| Per-scrape limit on number of labels that will be accepted for a sample.
  It requires Prometheus >= v2.27.0.
 
 | `labelNameLengthLimit`
 | `integer`
-| Per-scrape limit on length of labels name that will be accepted for a sample. 
+| Per-scrape limit on length of labels name that will be accepted for a sample.
  It requires Prometheus >= v2.27.0.
 
 | `labelValueLengthLimit`
 | `integer`
-| Per-scrape limit on length of labels value that will be accepted for a sample. 
+| Per-scrape limit on length of labels value that will be accepted for a sample.
  It requires Prometheus >= v2.27.0.
 
 | `namespaceSelector`
@@ -125,8 +125,8 @@ Required::
 
 | `scrapeProtocols`
 | `array (string)`
-| `scrapeProtocols` defines the protocols to negotiate during a scrape. It tells clients the protocols supported by Prometheus in order of preference (from most to least preferred). 
- If unset, Prometheus uses its default value. 
+| `scrapeProtocols` defines the protocols to negotiate during a scrape. It tells clients the protocols supported by Prometheus in order of preference (from most to least preferred).
+ If unset, Prometheus uses its default value.
  It requires Prometheus >= v2.49.0.
 
 | `selector`
@@ -142,7 +142,7 @@ Required::
 Description::
 +
 --
-`attachMetadata` defines additional metadata which is added to the discovered targets. 
+`attachMetadata` defines additional metadata which is added to the discovered targets.
  It requires Prometheus >= v2.37.0.
 --
 
@@ -219,17 +219,17 @@ Type::
 
 | `authorization`
 | `object`
-| `authorization` configures the Authorization header credentials to use when scraping the target. 
+| `authorization` configures the Authorization header credentials to use when scraping the target.
  Cannot be set at the same time as `basicAuth`, or `oauth2`.
 
 | `basicAuth`
 | `object`
-| `basicAuth` configures the Basic Authentication credentials to use when scraping the target. 
+| `basicAuth` configures the Basic Authentication credentials to use when scraping the target.
  Cannot be set at the same time as `authorization`, or `oauth2`.
 
 | `bearerTokenSecret`
 | `object`
-| `bearerTokenSecret` specifies a key of a Secret containing the bearer token for scraping targets. The secret needs to be in the same namespace as the PodMonitor object and readable by the Prometheus Operator. 
+| `bearerTokenSecret` specifies a key of a Secret containing the bearer token for scraping targets. The secret needs to be in the same namespace as the PodMonitor object and readable by the Prometheus Operator.
  Deprecated: use `authorization` instead.
 
 | `enableHttp2`
@@ -238,8 +238,8 @@ Type::
 
 | `filterRunning`
 | `boolean`
-| When true, the pods which are not running (e.g. either in Failed or Succeeded state) are dropped during the target discovery. 
- If unset, the filtering is enabled. 
+| When true, the pods which are not running (e.g. either in Failed or Succeeded state) are dropped during the target discovery.
+ If unset, the filtering is enabled.
  More info: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#pod-phase
 
 | `followRedirects`
@@ -256,7 +256,7 @@ Type::
 
 | `interval`
 | `string`
-| Interval at which Prometheus scrapes the metrics from the target. 
+| Interval at which Prometheus scrapes the metrics from the target.
  If empty, Prometheus uses the global scrape interval.
 
 | `metricRelabelings`
@@ -265,13 +265,13 @@ Type::
 
 | `metricRelabelings[]`
 | `object`
-| RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples. 
+| RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 
 | `oauth2`
 | `object`
-| `oauth2` configures the OAuth2 settings to use when scraping the target. 
- It requires Prometheus >= 2.27.0. 
+| `oauth2` configures the OAuth2 settings to use when scraping the target.
+ It requires Prometheus >= 2.27.0.
  Cannot be set at the same time as `authorization`, or `basicAuth`.
 
 | `params`
@@ -280,16 +280,16 @@ Type::
 
 | `params{}`
 | `array (string)`
-| 
+|
 
 | `path`
 | `string`
-| HTTP path from which to scrape for metrics. 
+| HTTP path from which to scrape for metrics.
  If empty, Prometheus uses the default value (e.g. `/metrics`).
 
 | `port`
 | `string`
-| Name of the Pod port which this endpoint refers to. 
+| Name of the Pod port which this endpoint refers to.
  It takes precedence over `targetPort`.
 
 | `proxyUrl`
@@ -298,30 +298,30 @@ Type::
 
 | `relabelings`
 | `array`
-| `relabelings` configures the relabeling rules to apply the target's metadata labels. 
- The Operator automatically adds relabelings for a few standard Kubernetes fields. 
- The original scrape job's name is available via the `__tmp_prometheus_job_name` label. 
+| `relabelings` configures the relabeling rules to apply the target's metadata labels.
+ The Operator automatically adds relabelings for a few standard Kubernetes fields.
+ The original scrape job's name is available via the `\__tmp_prometheus_job_name` label.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 
 | `relabelings[]`
 | `object`
-| RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples. 
+| RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 
 | `scheme`
 | `string`
-| HTTP scheme to use for scraping. 
- `http` and `https` are the expected values unless you rewrite the `__scheme__` label via relabeling. 
+| HTTP scheme to use for scraping.
+ `http` and `https` are the expected values unless you rewrite the `__scheme__` label via relabeling.
  If empty, Prometheus uses the default value `http`.
 
 | `scrapeTimeout`
 | `string`
-| Timeout after which Prometheus considers the scrape to be failed. 
+| Timeout after which Prometheus considers the scrape to be failed.
  If empty, Prometheus uses the global scrape timeout unless it is less than the target's scrape interval value in which the latter is used.
 
 | `targetPort`
 | `integer-or-string`
-| Name or number of the target port of the `Pod` object behind the Service, the port must be specified with container port property. 
+| Name or number of the target port of the `Pod` object behind the Service, the port must be specified with container port property.
  Deprecated: use 'port' instead.
 
 | `tlsConfig`
@@ -330,7 +330,7 @@ Type::
 
 | `trackTimestampsStaleness`
 | `boolean`
-| `trackTimestampsStaleness` defines whether Prometheus tracks staleness of the metrics that have an explicit timestamp present in scraped data. Has no effect if `honorTimestamps` is false. 
+| `trackTimestampsStaleness` defines whether Prometheus tracks staleness of the metrics that have an explicit timestamp present in scraped data. Has no effect if `honorTimestamps` is false.
  It requires Prometheus >= v2.48.0.
 
 |===
@@ -338,7 +338,7 @@ Type::
 Description::
 +
 --
-`authorization` configures the Authorization header credentials to use when scraping the target. 
+`authorization` configures the Authorization header credentials to use when scraping the target.
  Cannot be set at the same time as `basicAuth`, or `oauth2`.
 --
 
@@ -358,8 +358,8 @@ Type::
 
 | `type`
 | `string`
-| Defines the authentication type. The value is case-insensitive. 
- "Basic" is not a supported value. 
+| Defines the authentication type. The value is case-insensitive.
+ "Basic" is not a supported value.
  Default: "Bearer"
 
 |===
@@ -399,7 +399,7 @@ Required::
 Description::
 +
 --
-`basicAuth` configures the Basic Authentication credentials to use when scraping the target. 
+`basicAuth` configures the Basic Authentication credentials to use when scraping the target.
  Cannot be set at the same time as `authorization`, or `oauth2`.
 --
 
@@ -490,7 +490,7 @@ Required::
 Description::
 +
 --
-`bearerTokenSecret` specifies a key of a Secret containing the bearer token for scraping targets. The secret needs to be in the same namespace as the PodMonitor object and readable by the Prometheus Operator. 
+`bearerTokenSecret` specifies a key of a Secret containing the bearer token for scraping targets. The secret needs to be in the same namespace as the PodMonitor object and readable by the Prometheus Operator.
  Deprecated: use `authorization` instead.
 --
 
@@ -536,7 +536,7 @@ Type::
 Description::
 +
 --
-RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples. 
+RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 --
 
@@ -552,13 +552,13 @@ Type::
 
 | `action`
 | `string`
-| Action to perform based on the regex matching. 
- `Uppercase` and `Lowercase` actions require Prometheus >= v2.36.0. `DropEqual` and `KeepEqual` actions require Prometheus >= v2.41.0. 
+| Action to perform based on the regex matching.
+ `Uppercase` and `Lowercase` actions require Prometheus >= v2.36.0. `DropEqual` and `KeepEqual` actions require Prometheus >= v2.41.0.
  Default: "Replace"
 
 | `modulus`
 | `integer`
-| Modulus to take of the hash of the source label values. 
+| Modulus to take of the hash of the source label values.
  Only applicable when the action is `HashMod`.
 
 | `regex`
@@ -567,7 +567,7 @@ Type::
 
 | `replacement`
 | `string`
-| Replacement value against which a Replace action is performed if the regular expression matches. 
+| Replacement value against which a Replace action is performed if the regular expression matches.
  Regex capture groups are available.
 
 | `separator`
@@ -580,8 +580,8 @@ Type::
 
 | `targetLabel`
 | `string`
-| Label to which the resulting string is written in a replacement. 
- It is mandatory for `Replace`, `HashMod`, `Lowercase`, `Uppercase`, `KeepEqual` and `DropEqual` actions. 
+| Label to which the resulting string is written in a replacement.
+ It is mandatory for `Replace`, `HashMod`, `Lowercase`, `Uppercase`, `KeepEqual` and `DropEqual` actions.
  Regex capture groups are available.
 
 |===
@@ -589,8 +589,8 @@ Type::
 Description::
 +
 --
-`oauth2` configures the OAuth2 settings to use when scraping the target. 
- It requires Prometheus >= 2.27.0. 
+`oauth2` configures the OAuth2 settings to use when scraping the target.
+ It requires Prometheus >= 2.27.0.
  Cannot be set at the same time as `authorization`, or `basicAuth`.
 --
 
@@ -768,9 +768,9 @@ Type::
 Description::
 +
 --
-`relabelings` configures the relabeling rules to apply the target's metadata labels. 
- The Operator automatically adds relabelings for a few standard Kubernetes fields. 
- The original scrape job's name is available via the `__tmp_prometheus_job_name` label. 
+`relabelings` configures the relabeling rules to apply the target's metadata labels.
+ The Operator automatically adds relabelings for a few standard Kubernetes fields.
+ The original scrape job's name is available via the `\__tmp_prometheus_job_name` label.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 --
 
@@ -784,7 +784,7 @@ Type::
 Description::
 +
 --
-RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples. 
+RelabelConfig allows dynamic rewriting of the label set for targets, alerts, scraped samples and remote write samples.
  More info: https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
 --
 
@@ -800,13 +800,13 @@ Type::
 
 | `action`
 | `string`
-| Action to perform based on the regex matching. 
- `Uppercase` and `Lowercase` actions require Prometheus >= v2.36.0. `DropEqual` and `KeepEqual` actions require Prometheus >= v2.41.0. 
+| Action to perform based on the regex matching.
+ `Uppercase` and `Lowercase` actions require Prometheus >= v2.36.0. `DropEqual` and `KeepEqual` actions require Prometheus >= v2.41.0.
  Default: "Replace"
 
 | `modulus`
 | `integer`
-| Modulus to take of the hash of the source label values. 
+| Modulus to take of the hash of the source label values.
  Only applicable when the action is `HashMod`.
 
 | `regex`
@@ -815,7 +815,7 @@ Type::
 
 | `replacement`
 | `string`
-| Replacement value against which a Replace action is performed if the regular expression matches. 
+| Replacement value against which a Replace action is performed if the regular expression matches.
  Regex capture groups are available.
 
 | `separator`
@@ -828,8 +828,8 @@ Type::
 
 | `targetLabel`
 | `string`
-| Label to which the resulting string is written in a replacement. 
- It is mandatory for `Replace`, `HashMod`, `Lowercase`, `Uppercase`, `KeepEqual` and `DropEqual` actions. 
+| Label to which the resulting string is written in a replacement.
+ It is mandatory for `Replace`, `HashMod`, `Lowercase`, `Uppercase`, `KeepEqual` and `DropEqual` actions.
  Regex capture groups are available.
 
 |===
@@ -1266,7 +1266,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../monitoring_apis/podmonitor-monitoring-coreos-com-v1.adoc#podmonitor-monitoring-coreos-com-v1[`PodMonitor`] schema
-| 
+|
 |===
 
 .HTTP responses
@@ -1399,7 +1399,7 @@ Description::
 | Parameter | Type | Description
 | `body`
 | xref:../monitoring_apis/podmonitor-monitoring-coreos-com-v1.adoc#podmonitor-monitoring-coreos-com-v1[`PodMonitor`] schema
-| 
+|
 |===
 
 .HTTP responses
