--- a/modules/oadp-backing-up-opt-in.adoc
+++ b/modules/oadp-backing-up-opt-in.adoc
@@ -6,7 +6,7 @@
 :_mod-docs-content-type: PROCEDURE
 = Backing up pod volumes by using the opt-in method
 
-You can use the opt-in method to specify which volumes need to be backed up by File System Backup (FSB). You can do this by using the `backup.velero.io/backup-volumes` command.
+You can use the opt-in method to specify which volumes need to be backed up by File System Backup (FSB). You can do this by using the `backup.velero.io/backup-volumes` command, where `<your_volume_name_x>` specifies the name of the xth volume in the pod specification.
 
 .Procedure
 
@@ -17,7 +17,3 @@ You can use the opt-in method to specify which volumes need to be backed up by F
 $ oc -n <your_pod_namespace> annotate pod/<your_pod_name> \
   backup.velero.io/backup-volumes=<your_volume_name_1>,<your_volume_name_2>...,<your_volume_name_n>
 ----
-+
-where:
-
-`<your_volume_name_x>`:: specifies the name of the xth volume in the pod specification.
