--- a/modules/oadp-backing-up-opt-out.adoc
+++ b/modules/oadp-backing-up-opt-out.adoc
@@ -16,7 +16,7 @@ You can use the opt-out method to specify which volumes *not* to back up. You ca
 
 .Procedure
 
-* On each pod that contains one or more volumes that you do not want to back up, where `<your_volume_name_x>` specifies the name of the xth volume in the pod specification, run the following command:
+* On each pod that contains one or more volumes that you do not want to back up, where `<your_volume_name_x>` specifies the name of the _number_ of the volume in the pod specification, run the following command:
 +
 [source,terminal]
 ----
