--- a/modules/oadp-backing-up-opt-out.adoc
+++ b/modules/oadp-backing-up-opt-out.adoc
@@ -24,7 +24,7 @@ $ oc -n <your_pod_namespace> annotate pod/<your_pod_name> \
   backup.velero.io/backup-volumes=<your_volume_name_x>,<your_volume_name_y>...,<your_volume_name_z>
 ----
 
-You can enable this behavior for all velero backups by setting below flag to true in the Data Protection Application (DPA) resource `dpa.spec.configuration.velero.defaultVolumesToFSBackup`:
+You can enable this behavior for all velero backups by setting the `dpa.spec.configuration.velero.defaultVolumesToFSBackup` flag to true in the Data Protection Application (DPA) resource:
 
 [source,terminal]
 ----
